First commited as before_2212_rev1